# ninja-log-read-rs

./: Cargo.toml  README.md
src/: main.rs
