[package]
name = "ninja-log-read-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["cargo", "deprecated", "std"], default-features = false }
csv = "1.3.0"
nom = "7.1.3"
serde = { version = "1.0.200", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5.0"

[profile.release]
lto = true
